--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.2.0
 distlib==0.3.7
 Django==4.2.4
 django-extensions==3.2.3
+django-heroku==0.3.1
 djangorestframework==3.14.0
 filelock==3.12.2
 gunicorn==20.1.0
