KFLW-132 Created a feature to add multiple units at a time and update pro plan users monthly payment accordingly

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ ENVIRONMENT=
 STRIPE_SECRET_API_KEY=
 PLAID_CLIENT_ID=
 PLAID_SECRET_KEY=
+STRIPE_PRO_PLAN_PRODUCT_ID=
+STRIPE_STANDARD_PLAN_PRODUCT_ID=
