--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-filter==23.3
 django-heroku==0.3.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+Faker==19.11.0
 filelock==3.12.2
 gunicorn==21.2.0
 idna==3.4
