--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,8 @@ DATABASE_PORT=
 DATABASE_NAME=
 DATABASE_USER=
 DATABASE_PASSWORD=
+#S3 Credentials
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=
+AWS_STORAGE_BUCKET_NAME=
