--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.7.2
 bitcoin==1.1.42
+boto3==1.29.3
 certifi==2023.7.22
 charset-normalizer==3.2.0
 distlib==0.3.7
@@ -11,6 +12,7 @@ django-filter==23.3
 django-heroku==0.3.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+django-storages==1.14.2
 Faker==19.11.0
 filelock==3.12.2
 gunicorn==21.2.0
