--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ DATABASE_PASSWORD=
 #S3 Credentials
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-AWS_REGION=
+AWS_S3_REGION_NAME=
 AWS_STORAGE_BUCKET_NAME=
 
 MAILCHIMP_API_KEY=
