KFLW-64 - Allow users to invite tenant to each unit

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ PLAID_SECRET_KEY=
 STRIPE_PRO_PLAN_PRODUCT_ID=
 STRIPE_STANDARD_PLAN_PRODUCT_ID=
 BOLDSIGN_API_KEY=
+SEND_GRID_API_KEY=
 #Database Credentials
 DATABASE_HOST=
 DATABASE_PORT=
