KFLW-236 updated .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 ENVIRONMENT=
+SERVER_API_HOSTNAME=
 CLIENT_HOSTNAME=
 STRIPE_SECRET_API_KEY=
 PLAID_CLIENT_ID=
@@ -6,17 +7,20 @@ PLAID_SECRET_KEY=
 STRIPE_PRO_PLAN_PRODUCT_ID=
 STRIPE_STANDARD_PLAN_PRODUCT_ID=
 BOLDSIGN_API_KEY=
-SEND_GRID_API_KEY=
-#Database Credentials
+BOLDSIGN_BASE_URL=
 DATABASE_HOST=
 DATABASE_PORT=
 DATABASE_NAME=
 DATABASE_USER=
 DATABASE_PASSWORD=
+POSTMARK_SERVER_TOKEN=
+KEYFLOW_SENDER_EMAIL=
 #S3 Credentials
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-AWS_S3_REGION_NAME=
 AWS_STORAGE_BUCKET_NAME=
+AWS_S3_REGION_NAME=
 
 MAILCHIMP_API_KEY=
+MAILCHIMP_REQUEST_DEMO_AUDIENCE_ID=
+MAILCHIMP_SERVER_PREFIX=
