--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,7 @@ AWS_S3_REGION_NAME=
 MAILCHIMP_API_KEY=
 MAILCHIMP_REQUEST_DEMO_AUDIENCE_ID=
 MAILCHIMP_SERVER_PREFIX=
+
+CELERY_BROKER_URL=
+CELERY_RESULT_BACKEND=
+DJANGO_SETTINGS_MODULE=
