--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,35 @@
+amqp==5.2.0
 asgiref==3.7.2
 astroid==2.11.5
+async-timeout==4.0.3
+billiard==4.2.0
 bitcoin==1.1.42
 boto3==1.29.3
 botocore==1.32.3
 cachelib==0.10.2
+celery==5.4.0
 certifi==2021.10.8
 cffi==1.15.1
 chardet==5.1.0
 charset-normalizer==3.2.0
 click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 colorama==0.4.6
+cron-descriptor==1.4.3
 cryptography==39.0.0
 dill==0.3.7
 distlib==0.3.7
 dj-database-url==2.1.0
 Django==4.2.4
+django-celery-beat==2.6.0
 django-cors-headers==4.2.0
 django-extensions==3.2.3
 django-filter==23.3
 django-heroku==0.3.1
 django-storages==1.14.2
+django-timezone-field==6.1.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 docusign-admin==1.4.0
@@ -40,6 +50,7 @@ isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.3
 jmespath==1.0.1
+kombu==5.3.7
 lazy-object-proxy==1.4.3
 mailchimp-marketing==3.0.80
 MarkupSafe==1.1.1
@@ -52,6 +63,7 @@ pipenv==2022.1.8
 plaid-python==15.5.0
 platformdirs==3.10.0
 postmarker==1.0
+prompt_toolkit==3.0.44
 psycopg2==2.9.9
 psycopg2-binary==2.9.9
 py-oauth2==0.0.10
@@ -61,10 +73,12 @@ pycparser==2.21
 pyflakes==2.5.0
 PyJWT==2.8.0
 pylint==2.14.1
+python-crontab==3.1.0
 python-dateutil==2.8.2
 python-dotenv==0.21.0
 python-http-client==3.3.7
 pytz==2023.3
+redis==5.0.4
 requests==2.31.0
 requests-oauthlib==1.1.0
 s3transfer==0.7.0
@@ -78,8 +92,10 @@ tomlkit==0.12.1
 typing_extensions==4.7.1
 tzdata==2023.3
 urllib3==1.26.18
+vine==5.1.0
 virtualenv==20.21.0
 virtualenv-clone==0.5.7
+wcwidth==0.2.13
 Werkzeug==2.0.0
 whitenoise==6.5.0
 wrapt==1.11.2
